--- a/BytedanceWeather/Info.plist
+++ b/BytedanceWeather/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>使用您当前的位置信息</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>允许用户后台定位</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>允许长期使用您的位置信息</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
